blocker code smells; refs #23160